# clawpilot-skill-study

./: .gitignore  README.md  pyproject.toml
docs/: anti-skip-contract.md  composite-score-rubric.md  judge-protocol.md  methodology.md  workflow-taxonomy.md
fixtures/: FX-001.json  FX-002.json  FX-003.json  FX-004.json  FX-005.json  FX-006.json  FX-007.json  FX-008.json  FX-009.json  FX-010.json  FX-011.json  FX-012.json  FX-013.json  FX-014.json  FX-015.json  FX-016.json  FX-017.json  FX-018.json  FX-019.json  FX-020.json  FX-021.json  FX-022.json  FX-023.json  FX-024.json  FX-025.json  FX-026.json  FX-027.json  FX-028.json  FX-029.json  FX-030.json  FX-031.json  FX-032.json  FX-033.json  FX-034.json  FX-035.json  FX-036.json  FX-037.json  FX-038.json  FX-039.json  FX-040.json  (+11 more)
personas/: csa.yaml  dssp.yaml  manager.yaml
perturbations/: library.yaml
scenarios/_adversarial/: ADV-00001.json  ADV-00002.json  ADV-00003.json  ADV-00004.json  ADV-00005.json  ADV-00006.json  ADV-00007.json  ADV-00008.json  ADV-00009.json  ADV-00010.json  ADV-00011.json  ADV-00012.json  ADV-00013.json  ADV-00014.json  ADV-00015.json  ADV-00016.json  ADV-00017.json  ADV-00018.json  ADV-00019.json  ADV-00020.json  (+1480 more)
schemas/: fixture.schema.json  scenario.schema.json  write-proposal.schema.json
scripts/: coverage_report.py  distribution_report.py  generate_fixtures.py  generate_scenarios.py  scenario_generation_prompt.j2  validate_fixture.py  validate_scenario.py
tests/: test_distribution.py  test_failure_mode_coverage.py  test_generator_determinism.py  test_schema_validation.py
(+12673 files in other folders)
