[project]
name = "clawpilot-skill-study"
version = "0.1.0"
description = "ClawPilot SMB Skills Scientific Workflow Study - Phase 2 scenario corpus"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
